syntax="proto3";
//investments

option go_package ="GRPC/gen";//куда будут сгенерированы файлы

service Investment {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Get(GetRequest)returns(GetResponse);
  rpc Delete(DeleteRequest)returns(DeleteResponse);//(забираем банкноты)
}

message CreateRequest{
  int64 amount=1;//сумма инвестиции
  string currency=2;//валюта
}
message CreateResponse{
  int64 investment_id=1;
}

message GetRequest{}
message GetResponse {
  repeated Investments investment = 1;
}

message DeleteRequest{
  int64 investment_id=1;
}
message DeleteResponse{}

message Investments {//for return in get
  int64 ID = 1;
  int64 Amount = 2;
  string Currency = 3;
}


service Auth{
  rpc Register(RegisterRequest)returns(RegisterResponse);//like http endpoint(post)
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc RefreshToken(RefreshTokenRequest)returns(RefreshTokenResponse);
}

message RegisterRequest{
  string email=1;
  string password=2;
}
message RegisterResponse{
  int64 user_id=1;
}

message LoginRequest{
  string email=1;
  string password=2;
}
message LoginResponse{
  string accessToken=1;
  string refreshToken=2;
}

message RefreshTokenRequest{
  string refreshToken=1;
}
message RefreshTokenResponse{
  string accessToken=1;
  string refreshToken=2;
}